# tkvillage

./: .gitignore  README.md  TODO.txt  pyproject.toml  zoo-project.json
.context-jetpack/: data.json
agents/: learned-programming-guidelines.md
docs/manual/: glossary.html  index.html
docs/manual/assets/: manual.css  nav.js
docs/manual/functions/: all-functions.html  config-functions.html  effects-ticks-debug-functions.html  events-messages-functions.html  hosting-functions.html  runtime-functions.html  window-kind-functions.html  windows-functions.html
docs/manual/mental-model/: events-effects.html  identifiers-and-targets.html  overview.html  runtime-state.html  shutdown.html  tick-loop.html  window-kinds.html  windows.html
docs/manual/tutorial/: counter-window.html  index.html  lionscliapp-setup.html  quick-start.html  shutdown-config.html  testing-debugging.html
docs/raw/: 0000__data-garden-file.json  0010__tkvillage_kernel_spec_v1.json  0011__initial-development-prompt.md  0015__data-dictionary_app.json  0020__tkvillage-system-manual.json  0022__tkvillage-system-api-reference.json  0024__tkvillage-migration-guide_declare-app.json
examples/: minimal_app.py
src/tkvillage/: __init__.py  app.py  cli.py  config.py  debug.py  effects.py  events.py  messages.py  project_dir.py  reducers.py  root.py  testing.py  tick.py  windows.py
tests/: test_core.py
